# CRM-backend

backend/: .env  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  smartserve.db
backend/alembic/: env.py
backend/alembic/versions/: f068c102f524_init.py
backend/app/: main.py
backend/app/ai-models/: ai_churn_logistic.py  revenue_daily.csv  router.py  storage.py
backend/app/ai_models/: __init__.py  ai_churn_logistic.py  ai_revenue_prophet.py  churn_dataset.csv  config.py  router.py  schemas.py  storage.py
backend/app/ai_models/models/: churn_logistic.joblib
backend/app/api/v1/: appointment.py  auth.py  branches.py  customers.py  payments.py  reports.py  router.py  services.py  staff.py
backend/app/api/v1/CRM_APIS/: opencollection.yml
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/integration/: email.py  razorpay.py  razorpay_client.py
backend/app/models/: appointment.py  appointment_service.py  branch.py  customer.py  payment.py  payment_event.py  service.py  staff.py  tenant.py  user.py
backend/app/repositiories/: tenant_repo.py  user_repo.py
backend/app/schemas/: appointment.py  auth.py  branch.py  common.py  customer.py  payment.py  service.py
backend/app/services/: auth_service.py
backend/app/workers/: celery_app.py  tasks.py
